lots of small changes
name_scan help corrected, typo channles, --version --help and RPC help
working, coinexplorer names added, --noirc and --notify, more
checkpoints, purge depth on first run not showing warning, more dns
seeds, coinexplorer after readBlockFile now sets persistance correctly.

--- a/applications/coinexplorer/CMakeLists.txt
+++ b/applications/coinexplorer/CMakeLists.txt
@@ -24,7 +24,7 @@ www/js/raphael.js_
 )
 
 
-SET(TARGET_ADDED_LIBRARIES coinNAT)
+SET(TARGET_ADDED_LIBRARIES coinNAT coinName)
 
 IF( CMAKE_SYSTEM MATCHES "Linux" )
     SET(TARGET_EXTERNAL_LIBRARIES
